--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,10 @@ header h1{
     text-align: center;
 }
 
+.description{
+    clear: left;
+}
+
 .description img{
     float: left;
     margin: 0 10px 10px 0;
@@ -39,4 +43,53 @@ header h1{
 .information .type{
     display: inline;
     background-color: #E35A4D;
+    padding: 3px 5px;
+    font-size: 80%;
+    color: #fff;
+}
+
+.content{
+    background-color: #fff;
+    padding: 20px;
+}
+
+.songs{
+    margin: 0 0 20px;
+}
+
+.songs h2{
+    clear: left;
+    font-size: 100%;
+    font-weight: normal;
+    margin: 0;
+    background-color: #E6E4DD;
+    padding: 5px 10px;
+}
+
+.songs ol{
+    padding: 0;
+    margin: 0;
+    list-style: decimal inside;
+}
+
+.songs li{
+    border-bottom: 1px solid #ccc;
+    width: 50%;
+    float: left;
+    padding: 5px 10px;
+}
+
+.clearfix:after{
+    content: " ";
+    display: table;
+    clear: both;
+}
+
+a{
+    color: #666;
+}
+
+footer{
+    text-align: center;
+    font-size: 80%;
 }
